--- a/workflows/pi_correspondence/email_templates/B_final_email_templates.Rmd
+++ b/workflows/pi_correspondence/email_templates/B_final_email_templates.Rmd
@@ -28,7 +28,9 @@
 
 > <a href = 'https://doi.org/10.18739/A20X0X' target='_blank'>https://doi.org/10.18739/A20X0X</a>
 
-> Please let us know if you need any further assistance. However, any further changes to the dataset will result in a new DOI and then a link to updated version will appear at the top of webpage of the old DOI. If you would like to maintain the same DOI please let us know.
+> If in the future there is a publication associated with this dataset, we would appreciate it if you could register the DOI of your published paper with us by using the Citations button right below the title at the dataset landing page. We are working to build our catalog of dataset citations in the Arctic Data Center.
+
+> Please let us know if you need any further assistance.
 
 *New Submission: Abstract, methods, excel to csv, and attributes*
 > Thank you for your submission to the Arctic Data Center.  From my preliminary examination of your dataset a few fields need to be updated before we can assign a DOI. 
