consolidated project information to set_project.Rmd and updated final review checklist to include a link to that page

--- a/workflows/pi_correspondence/final_review_checklist.Rmd
+++ b/workflows/pi_correspondence/final_review_checklist.Rmd
@@ -47,18 +47,7 @@ doc <- eml_add_entity_system(doc)
 ### Project
 - if it is an NSF award you can use the helper function:
     + `doc$dataset$project <- eml_nsf_to_project(awards)`
-    + NSF award numbers should be listed as "NSF 1234567"
-    
-- On the web form right now only fills in the funding field. We need instructions on how to convert that to the new awards formatting until the form is updated to include these fields:
-
-```
-project$award$funderName # required
-project$award$title # required
-project$award$awardNumber
-project$award$funderIdentifier
-```
-
-- Information can be found in using the [Open Funder Registry](https://gitlab.com/crossref/open_funder_registry/-/tree/master) 
+- for other awards that need to be set manually, see the [set project](https://nceas.github.io/datateam-training/reference/set-the-project-section.html) page
 
 ### Methods
 - present
