remove the stringsAsFactors = F from the example code. No longer needed in R >= 4.0 moving forward

--- a/training/01_introduction.Rmd
+++ b/training/01_introduction.Rmd
@@ -87,8 +87,7 @@ attributes <- data.frame(attributeName = 'length_1',
                          measurementScale = 'ratio',
                          domain = 'numericDomain',
                          unit = 'meter',
-                         numberType = 'real',
-                         stringsAsFactors = FALSE)
+                         numberType = 'real')
 
 att_list <- set_attributes(attributes)
 
