--- a/workflows/edit_eml/edit_attributelists.Rmd
+++ b/workflows/edit_eml/edit_attributelists.Rmd
@@ -64,9 +64,7 @@ attributes <- data.frame(
     unit = c(NA, NA, NA, NA,'milliliter', 'dimensionless', 'celsius', NA),
     numberType = c(NA, NA, NA,NA, 'real', 'real', 'real', NA),
     missingValueCode = c(NA, NA, NA,NA, NA, NA, NA, 'NA'),
-    missingValueCodeExplanation = c(NA, NA, NA,NA, NA, NA, NA, 'no sampling comments'),
-    
-    stringsAsFactors = FALSE)
+    missingValueCodeExplanation = c(NA, NA, NA,NA, NA, NA, NA, 'no sampling comments'))
 ```
 
 However, typing this out in R can be a major pain. Luckily, there's a Shiny app that you can use to build attribute information. You can use the app to build attributes from a data file loaded into R (recommended as the app will auto-fill some fields for you) to edit an existing attribute table, or to create attributes from scratch. Use the following commands to create or modify attributes (these commands will launch a Shiny app in your web browser):
@@ -131,9 +129,7 @@ custom_units <- data.frame(
   parentSI = c('ohmMeter', 'pascal'),
   multiplierToSI = c('1','10000'),
   abbreviation = c('S/m','decibar'),
-  description = c('siemens per meter', 'decibar'),
-  
-  stringsAsFactors = FALSE)
+  description = c('siemens per meter', 'decibar'))
 ```
 
 Using `EML::get_unit_id` for custom units will also generate valid EML unit ids. 
