update chapter 03 for datapack and dataone

--- a/workflows/explore_eml/navigate_through_eml.Rmd
+++ b/workflows/explore_eml/navigate_through_eml.Rmd
@@ -10,10 +10,9 @@ library(EML)
 
 ```{r, error = FALSE, eval = FALSE}
 # Need to be in this member node to explore file
-cn_staging <- CNode('STAGING')
-adc_test <- getMNode(cn_staging,'urn:node:mnTestARCTIC')
+d1c_test <- dataone::D1Client("STAGING", "urn:node:mnTestARCTIC")
 
-doc <- read_eml(getObject(adc_test, "urn:uuid:558eabf1-1e91-4881-8ba3-ef8684d8f6a1"))
+doc <- read_eml(getObject(d1c_test@mn, "urn:uuid:558eabf1-1e91-4881-8ba3-ef8684d8f6a1"))
 ```
 
 ```{r, eval = FALSE}
