--- a/workflows/edit_data_packages/update_a_package.Rmd
+++ b/workflows/edit_data_packages/update_a_package.Rmd
@@ -6,29 +6,45 @@ Make sure you have the package you want to update, <a href = 'https://nceas.gith
 
 ### Publish update
 
-Now we can update your data package to include the new data object.
-
+Now we can update your data package to include the new data object. Assuming you have updated your data package earlier something like the below: 
 ```{r, eval = F}
+d1c_test <- dataone::D1Client("STAGING", "urn:node:mnTestARCTIC")
+packageId <- "the resource map"
+
+dp <- getDataPackage(d1c_test, identifier=packageId, lazyLoad=TRUE, quiet=FALSE)
+metadataId <- selectMember(dp, name="sysmeta@formatId", value="https://eml.ecoinformatics.org/eml-2.2.0")
+
+#some modification to the EML here
+
 eml_path <- "path/to/your/saved/eml.xml"
+write_eml(doc, eml_path)
 
-pkg <- get_package(adc_test, "resource_map_pid")
+dp <- replaceMember(dp, metadataId, replacement=eml_path)
 ```
 
+You can then upload your data package:
 ```{r, eval = FALSE}
-update <- publish_update(adc_test, 
-                         metadata_pid = pkg$metadata,
-                         resource_map_pid = pkg$resource_map,
-                         data_pids = c(pkg$data, id_new), # add new pid
-                         metadata_path = eml_path, 
-                         public = FALSE)
+myAccessRules <- data.frame(subject="CN=arctic-data-admins,DC=dataone,DC=org", permission="changePermission") 
+packageId <- uploadDataPackage(d1c_test, dp, public=FALSE, accessRules=myAccessRules, quiet=FALSE)
 ```
 
-If you want to delete the existing old pid to be published and replace it with new pid, make sure you delete the existing pid from `pkg$data` and then combine `id_new` together as argument for `data_pids`in the `publish_update()`.
+If a package is ready to be public, you can change the `public` argument in the `datapack::uploadDataPackage()` call to `TRUE`.
 
-If a package is ready to be public, you can change the `public` argument in the `publish_update()` call to `TRUE`.
+If you want to publish with a DOI (Digital Object Identifier) instead of a UUID (Universally Unique Identifier), you need to do this when replacing the metadata. **This should only be done after the package is finalized and has been thoroughly reviewed!**
+```{r, eval = FALSE}
+doi <- dataone::generateIdentifier(d1c_test@mn, "DOI")
+dp <- replaceMember(dp, metadataId, replacement=eml_path, newId=doi)
 
-If you want to publish with a DOI (Digital Object Identifier) instead of a UUID (Universally Unique Identifier), you can change the `use_doi` argument to `TRUE`. **This should only be done after the package is finalized and has been thoroughly reviewed!**
+newPackageId <- uploadDataPackage(d1c_test, dp, public=TRUE, quiet=FALSE)
+```
 
-If the package has children, set the `child_pids` argument to `pkg$child_packages`.
+If there is a pre-issued DOI (researcher requested the DOI for the publication first), please do the following:
+```{r, eval = FALSE}
+dp <- replaceMember(dp, metadataId, replacement=eml_path, newId="your pre-issued doi previously generated")
+
+newPackageId <- uploadDataPackage(d1c_test, dp, public=TRUE, quiet=FALSE)
+```
+
+If the package has children, see how to do this using `arcticdatautils::publish_update` in the nesting section of the reference manual.
 
 Refresh the landing page at test.arcticdata.io/#view/... for this package and then follow the "newer version" link to view the latest.
