--- a/workflows/edit_data_packages/update_an_object.Rmd
+++ b/workflows/edit_data_packages/update_an_object.Rmd
@@ -17,7 +17,7 @@ dp <- replaceMember(dp, metadataId, replacement=file_path)
 ```
 
 If the object was previously uploaded, we can use `getDataObject` to retrieve it:
-```{r}
+```{r, eval=F}
 dataObj <- getDataObject(d1c_test, id="urn:uuid: here", lazyLoad=T, limit="1TB")
 dp <- addMember(dp, dataObj, mo=metadataId)
 ```
