--- a/training/07_building_provenance.Rmd
+++ b/training/07_building_provenance.Rmd
@@ -37,11 +37,11 @@ A resource map is a special kind of XML document that describes (among other thi
 ```{r, eval = F}
 library(dataone)
 
-adc_test <- MNode("https://test.arcticdata.io/metacat/d1/mn/v2")
+d1c_test <- dataone::D1Client("STAGING", "urn:node:mnTestARCTIC")
 pid <- "urn:uuid:82bd7d7f-9e18-4fd2-8bda-99b1fddab556" # A resource map PID
 
 path <- tempfile(fileext = ".xml") # We're saving to a temporary file but you can save elsewhere
-writeLines(rawToChar(getObject(adc_test, pid)), path) # Write the object to `path`
+writeLines(rawToChar(getObject(d1c_test@mn, pid)), path) # Write the object to `path`
 ```
 
 If we open that file up in a text editor, we see this:
@@ -109,8 +109,8 @@ This line says "The aggregation aggregates `urn:uuid:c59b7505-39e6-4def-bc82-b67
 Now we know *which* objects are in our data package but we don't know which one contains metadata and which one contains data. For that, we need to get a copy of the system metadata for each object:
 
 ```{r, eval=FALSE}
-getSystemMetadata(adc_test, "urn:uuid:c59b7505-39e6-4def-bc82-b67a8d117ce5")@formatId
-getSystemMetadata(adc_test, "urn:uuid:61b48e72-ea29-4ba5-8131-4f59a9ebcd27")@formatId
+getSystemMetadata(d1c_test@mn, "urn:uuid:c59b7505-39e6-4def-bc82-b67a8d117ce5")@formatId
+getSystemMetadata(d1c_test@mn, "urn:uuid:61b48e72-ea29-4ba5-8131-4f59a9ebcd27")@formatId
 ```
 
 From the `formatId`s, we can see the first `PID` is the EML (`formatId`: `[1]"eml://ecoinformatics.org/eml-2.1.1"`) and the second `PID` is a data object (`formatId`: `[1]"application/octet-stream"`). Now we know enough to know what's in the data package:
@@ -136,8 +136,8 @@ d1c <- D1Client("STAGING2", "urn:node:mnTestKNB")
 Next, get the `PID` of the resource map of the data package you are adding prov to, and load that package into R using the `getDataPackage()` function.
 
 ```{r, eval = F}
-resmapId <- "urn:uuid:8f501606-2c13-4454-b22d-050a4176a97b"
-pkg <- getDataPackage(d1c, id=resmapId, lazyLoad=TRUE, limit="0MB", quiet=FALSE)
+packageId <- "urn:uuid:8f501606-2c13-4454-b22d-050a4176a97b"
+dp <- getDataPackage(d1c, id=packageId, lazyLoad=TRUE, limit="0MB", quiet=FALSE)
 ```
 
 Printing `pkg` in your console shows you the contents of the data package, including all of the objects and their names:
@@ -175,7 +175,7 @@ Relationships:
 In this example above, the data package has two .csv files, with an R script that converts one to the other. To create our provenance trace, first we need to select the source object, and save the `PID` to a variable. We do this using the `selectMember()` function, and we can query part of the system metadata to select the file that we want. This function takes the data package (`pkg`), the name of the sysmeta field to query (in this case we use the `fileName`), and the value that you want to match that field to (in this case, 'PWS_Weir_Tower_export.csv').
 
 ```{r, eval = F}
-sourceObjId <- selectMember(pkg, name="sysmeta@fileName", value='PWS_Weir_Tower_export.csv')
+sourceObjId <- selectMember(dp, name="sysmeta@fileName", value='PWS_Weir_Tower_export.csv')
 ```
 
 This returns a list of the source object `PID`s that match the query (in this case only one object matches).
@@ -188,19 +188,19 @@ This returns a list of the source object `PID`s that match the query (in this ca
 Now we need to select our output object. Here, we use the `selectMember()` function again, and save the result to a new variable.
 
 ```{r, eval=F}
-outputObjId <- selectMember(pkg, name="sysmeta@fileName", value='PWS_weirTower.csv')
+outputObjId <- selectMember(dp, name="sysmeta@fileName", value='PWS_weirTower.csv')
 ```
 
 Now we query for the R script. In this case, we query based on the value of the `formatId` as opposed to the `fileName`. This can be useful if you wish to select a large list of `PID`s that are all similar.
 
 ```{r, eval=F}
-programObjId <- selectMember(pkg, name="sysmeta@formatId", value="application/R")
+programObjId <- selectMember(dp, name="sysmeta@formatId", value="application/R")
 ```
 
 Next, you use these lists of `PID`s and a function called `describeWorkflow()` to add these relationships to the data package. Note that if you do not have a program in the workflow, or a source file, you can simply leave those arguments blank.
 
 ```{r, eval = F}
-pkg <- describeWorkflow(pkg, sources=sourceObjId, program=programObjId, derivations=outputObjId)
+dp <- describeWorkflow(dp, sources=sourceObjId, program=programObjId, derivations=outputObjId)
 ```
 
 Viewing `pkg` again confirms that these relationships have been inserted into the data package, as shown by the `wasDerivedFrom` and `wasGeneratedBy` statements. It is always a good idea to print `pkg` to confirm that your `PID` selection process worked as expected, and your prov relationships make sense.
@@ -234,7 +234,7 @@ Relationships (updated):
 Finally, you can upload the data package using the `uploadDataPackage()` function, which takes the DataONE client `d1c` we set in the beginning, the updated `pkg` variable, some options for public read, and whether or not informational messages are printed during the upload process. **First, you will need to run a token obtained from https://dev.nceas.ucsb.edu/ to publish to that node.**
 
 ```{r, eval = FALSE}
-resmapId_new <- uploadDataPackage(d1c, pkg, public = TRUE, quiet = FALSE)
+resmapId_new <- uploadDataPackage(d1c, dp, public = TRUE, quiet = FALSE)
 ```
 
 If successful you should be able to navigate to the landing page of your dataset, and icons should show up where the sources and derivations are, such as in this example: ![](images/prov_inputoutput.png)
