update text now that eml 2.2.0 is supported

--- a/training/03_exploring_eml.Rmd
+++ b/training/03_exploring_eml.Rmd
@@ -2,11 +2,11 @@
 
 We use the Ecological Metadata Language (EML) to store structured metadata for all datasets submitted to the Arctic Data Center. EML is written in XML (extensible markup language) and functions for building and editing EML are in the <a href = 'https://github.com/ropensci/EML' target='_blank'>EML R package</a>.
 
-Currently the Arctic Data Center website supports editing EML version 2.1.1 but will move to 2.2.0 in the near future.
+Currently the Arctic Data Center website supports editing EML version 2.2.0. There are still some metadata in 2.1.1 that will be converted eventually. 
 
 For additional background on EML and principles for metadata creation, check out <a href = 'data/eml-principles.pdf' target='_blank'>this paper</a>.
 
-If you aren't too familiar with lists and how to navigate them yet take a look at the relevant sections in the <a href = 'https://stat545.com/r-objects.html#lists-hold-just-about-anything' target='_blank'>Stat 545 class:</a> 
+If you aren't too familiar with lists and how to navigate them yet take a look at the relevant sections in the <a href = 'https://stat545.com/r-objects.html#lists-hold-just-about-anything' target='_blank'>Stat 545 class.</a> 
 
 ```{r, child = '../workflows/explore_eml/navigate_through_eml.Rmd'}
 ```
